testMemory() added